# rust-crud

./: .env  Cargo.toml  README.md  build.rs  post.lua
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-05-04-154226_heroes/: up.sql
protos/: hero.proto
src/: api.http  controls.rs  db.rs  hero.rs  main.rs  schema.rs
src/controls/: hero_service.rs
src/db/: pagination.rs
src/models/: hero.rs
src/protos/: hero.rs
src/util/: page.rs
