[package]
name = "hero-api"
version = "0.1.0"
authors = ["Siyun Wu <siwu@linkedin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="2.0.0"
actix-rt = "1.0"
serde_derive = "1.0.106"
serde = "1.0.106"
r2d2="0.8.8"
r2d2-diesel="1.0.0"
diesel = { version = "1.4.4", features = ["postgres"] }
futures = "0.3.5"
